# trailrun_race_gpx_analyzer

./: Dockerfile  LICENSE  README.md  app.py  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
project/: settings.py  ui.py
project/application_services/: gpx_service.py  marker_manager.py
project/data_accessors/: gpx_analyzer.py  gpx_loader.py
project/views/: chart_view.py  map_view.py
tests/: __init__.py  conftest.py
tests/e2e/: test_app_basic.py
tests/unit/: test_gpx_analyzer.py  test_gpx_service.py
usages/: usage.md
